# cookbook

examples/localcowork/: .gitignore  README.md  package.json  vitest.model.config.ts
examples/localcowork/scripts/: run-real-model-tests.sh
examples/localcowork/src/: App.tsx  modelRecommendations.ts  styles.css
examples/localcowork/src-tauri/: Cargo.toml
examples/localcowork/src-tauri/src/commands/: settings.rs
examples/localcowork/src/components/Startup/: FeatureModelDownloads.tsx
examples/localcowork/src/stores/: onboardingStore.ts
examples/localcowork/src/types/: settings.ts
examples/localcowork/tests/: startup-model-recommendations.test.ts
